style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');

:root {
    --gradient: linear-gradient(
        160deg,
        hsl(190, 60%, 58%) 0%,
        hsl(220, 65%, 55%) 45%,
        hsl(265, 58%, 41%) 100%
    );

    --gradient-2: linear-gradient(
        90deg,
        #00c2db,
        #00a2ff,
        #0084ff,
        #0077ff,
        #003cff
    );

    --gradient-3: linear-gradient(
        30deg,
        #00e1ff,
        #00507e,
        #003077,
        #000986,
        #00ccff
    );

    --base-color: white;
}

body {
    font-family: 'Poppins', sans-serif;
    padding: 0;
    margin: 0;
    background-size: 300%;
    background-image: var(--gradient);
    animation: bg-animation 15s infinite;
    color: var(--base-color);
}

@keyframes bg-animation {
    0% {background-position: left;}
    50% {background-position: right;}
    100% {background-position: left;}
}

.photo {
    border-radius: 50%;
    padding: 6px;
    display: inline-block;
    overflow: hidden;
    height: 300px;
    width: 300px;

    background-image: var(--gradient-2);
    background-size: 300%;
    background-position: right;
    animation: bg-animation 10s infinite;
}

.photo img {
    border-radius: inherit;
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.name {
    text-transform: uppercase;
    font-weight: 900;
    font-size: 2rem;
    background-image: var(--gradient-3);
    background-clip: text;
    color: transparent;
}

.navigation-bar {
    position: sticky;
    top: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 6rem;
    background-color: rgba(40, 40, 40, 0.95);
    /*👉backdrop-filter: blur(8px);👈*/
    box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 4px;
    z-index: 2147483647;
    border-bottom: 1px solid rgb(26, 26, 26);
}

.navigation {
    display: flex;
    list-style: none;
    gap: 2rem;
    padding: 0;
    margin: 0;
}

ul {
    list-style: none;
}

.navigation a {
    text-decoration: none;
    color: var(--base-color);
}

section {
    display: grid;
    place-items: center;
    align-content: center;
    min-height: 100vh;
}

/*👉.hidden {
    opacity: 0;
    filter: blur(8px);
    transform: translateX(-100%);
    transition: all 2.5s;
}

.show {
    opacity: 1;
    filter: blur(0);
    transform: translateX(0);
}
👈*/
@media(prefers-reduced-motion) {
    .hidden {
        transition: none;
    }
}

